--- a/app/src/main/res/layout/activity_conversor.xml
+++ b/app/src/main/res/layout/activity_conversor.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#000000"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".Conversor">
@@ -11,6 +12,7 @@
         android:id="@+id/lbl_Base_Inicial"
         android:layout_width="match_parent"
         android:layout_height="37dp"
+        android:textColor="#FFFFFF"
         android:text="Base_Inicial:"
         android:textSize="25dp" />
 
@@ -19,6 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="58dp"
         android:ems="10"
+        android:textColor="#FFFFFF"
+        android:textSize="20dp"
         android:inputType="textPersonName"
         android:hint="Ingrese un numero"/>
 
@@ -27,6 +31,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:onClick="Calcular"
+        android:background="#FFDE4319"
+        android:textColor="#000000"
         android:text="Calcular"
         android:textSize="20dp" />
 
@@ -34,6 +40,7 @@
         android:id="@+id/lbl_Base1"
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:textColor="#FFFfbb33"
         android:text="Base1:"
         android:textSize="25dp" />
 
@@ -42,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
+        android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textSize="25dp" />
 
@@ -49,6 +57,7 @@
         android:id="@+id/lbl_Base2"
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:textColor="#FFFF0762"
         android:text="Base2:"
         android:textSize="25dp" />
 
@@ -57,6 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
+        android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textSize="25dp" />
 
@@ -64,6 +74,7 @@
         android:id="@+id/lbl_Base3"
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:textColor="#ff0099cc"
         android:text="Base3:"
         android:textSize="25dp" />
 
@@ -72,15 +83,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="0"
+        android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textSize="25dp" />
 
     <Button
         android:id="@+id/btn_Atras"
-        android:layout_width="111dp"
-        android:layout_height="63dp"
+        android:layout_width="60dp"
+        android:layout_height="23dp"
+        android:background="#FFFF011B"
         android:onClick="Atras"
         android:text="Atras"
-        android:textSize="20dp" />
+        android:textColor="#ffff"
+        android:textSize="10dp" />
 
 </LinearLayout>
