--- a/app/src/main/res/layout/activity_conversor.xml
+++ b/app/src/main/res/layout/activity_conversor.xml
@@ -12,8 +12,8 @@
         android:id="@+id/lbl_Base_Inicial"
         android:layout_width="match_parent"
         android:layout_height="37dp"
+        android:text="@string/txtBaseInicial"
         android:textColor="#FFFFFF"
-        android:text="Base_Inicial:"
         android:textSize="25dp" />
 
     <EditText
@@ -30,61 +30,61 @@
         android:id="@+id/btn_Calcular"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:onClick="Calcular"
         android:background="#FFDE4319"
+        android:onClick="Calcular"
+        android:text="@string/btnCalcular"
         android:textColor="#000000"
-        android:text="Calcular"
         android:textSize="20dp" />
 
     <TextView
         android:id="@+id/lbl_Base1"
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:text="@string/txtBase1"
         android:textColor="#FFFfbb33"
-        android:text="Base1:"
         android:textSize="25dp" />
 
     <TextView
         android:id="@+id/lbl_Base1_Total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="#FFFFFF"
+        android:text="@string/Numero1"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="25dp" />
 
     <TextView
         android:id="@+id/lbl_Base2"
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:text="@string/txtBase2"
         android:textColor="#FFFF0762"
-        android:text="Base2:"
         android:textSize="25dp" />
 
     <TextView
         android:id="@+id/lbl_Base2_Total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="#FFFFFF"
+        android:text="@string/Numero2"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="25dp" />
 
     <TextView
         android:id="@+id/lbl_Base3"
         android:layout_width="match_parent"
         android:layout_height="46dp"
+        android:text="@string/txtBase3"
         android:textColor="#ff0099cc"
-        android:text="Base3:"
         android:textSize="25dp" />
 
     <TextView
         android:id="@+id/lbl_Base3_Total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0"
-        android:textColor="#FFFFFF"
+        android:text="@string/Numero3"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="25dp" />
 
     <Button
